--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <body> 
     <h1>hello world</h1>
     <p>im dumb</p>
-    <img src = "V1Dwayne.jpg"> 
+    <img class = "fit-picture"src = "V1Dwayne.jpg"> 
   </body>
 </html>
