--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <body> 
     <h1>hello world</h1>
     <p>im dumb</p>
-    <img class = "fit-picture"src = "V1Dwayne.jpg"> 
+    <img class = "fit-picture"src = "C:\Users\ericksonbak52\Documents\GitHub\ericksonbak52.github.io\images\V1Dwayne.jpg"> 
+    <img class = "fit-picture"src = "V1Dwayne.jpg">
   </body>
 </html>
