--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <body> 
     <h1>hello world</h1>
     <p>im dumb</p>
-    <img class = "fit-picture" src = "apple.jpg">
-    <img class = "fit-picture" src = "C:\Users\ericksonbak52\Documents\GitHub\ericksonbak52.github.io\images\Ben Van Valen.jpg"
+    <img class = "fit-picture" src = "images/apple.jpg">
+    <img class = "fit-picture" src = "images/V1Dwayne.jpg"
   </body>
 </html>
