--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <h1>hello world</h1>
     <p>im dumb</p>
     <img class = "fit-picture" src = "images/apple.jpg">
-    <img class = "fit-picture" src = "images/V1Dwayne.jpg"
+    <img class = "fit-picture" src = "images/V1Dwayne.jpg">
   </body>
 </html>
