--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <body> 
     <h1>hello world</h1>
     <p>im dumb</p>
-    <img class = "fit picture" src = "images/Apple.jpg">
+    <img src = "images/Apple.jpg">
     <img class = "fit-picture" src = "images/V1Dwayne.jpg">
   </body>
 </html>
