--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <body> 
-    <h1>hello world</h1>
-    <p>im dumb</p>
-    <img src = "images/Apple.jpg">
-    <img class = "fit-picture" src = "images/V1Dwayne.jpg">
+    <h1>hello gamers</h1>
+    <p>look at coles things</p>
+    <img src = "images/Apple.jpg" width="500" height="600">
+    <img src = "images/V1Dwayne.jpg">
   </body>
 </html>
