--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <p>look at coles things</p>
     <img src = "images/Apple.jpg" width="500" height="600">
     <img src = "images/V1Dwayne.jpg">
+    <img src = "images/Ben Van Valen.jpg" width="500" height = "600">
   </body>
 </html>
