--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body> 
-    <h1>hello gamers</h1>
+    <h1><strong>Hello Gamers</strong></h1>
     <p>look at coles things</p>
     <img src = "images/Apple.jpg" width="500" height="600">
     <img src = "images/V1Dwayne.jpg">
