--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <body> 
-    <h1><bold>Hello Gamers<<bold></h1>
-    <p>look at coles things</p>
+    <h1><bold>Hello Gamers<bold></h1>
+    <p>look at coles things.</p>
     <img src = "images/Apple.jpg" width="500" height="600">
     <img src = "images/V1Dwayne.jpg">
     <img src = "images/Ben Van Valen.jpg" width="500" height = "600">
