--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
+<title>Stolen pictures</title>
 <html>
+<link href="looky.css" type="text/css" rel="stylesheet">
   <body> 
     <h1><bold>Hello Gamers<bold></h1>
     <p>look at coles things.</p>
-    <img src = "images/Apple.jpg" width="500" height="600">
-    <img src = "images/V1Dwayne.jpg">
-    <img src = "images/Ben Van Valen.jpg" width="500" height = "600">
+    <img src = "images/Apple.jpg" width="400" height="500">
+    <img src = "images/V1Dwayne.jpg" width="400" height="500">
+    <img src = "images/Ben Van Valen.jpg" width="400" height = "500">
+    <img src = "images/Landscape3.jpeg" width = "400" height = "500">
   </body>
 </html>
