--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <body> 
     <h1><bold>Hello Gamers<bold></h1>
     <p>look at coles things.</p>
-    <img src = "images/Apple.jpg" width="400" height="500">
-    <img src = "images/V1Dwayne.jpg" width="400" height="500">
-    <img src = "images/Ben Van Valen.jpg" width="400" height = "500">
+    <img src = "images/Apple.jpeg" width="400" height="500">
+    <img src = "images/V1Dwayne.jpeg" width="400" height="500">
+    <img src = "images/Ben Van Valen.jpeg" width="400" height = "500">
     <img src = "images/Landscape3.jpeg" width = "400" height = "500">
   </body>
 </html>
