--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <link href="looky.css" type="text/css" rel="stylesheet">
   <body> 
     <h1><bold>Hello Gamers<bold></h1>
-    <p>look at coles things.</p>
-    <img src = "images/Apple.jpeg" width="400" height="500">
-    <img src = "images/V1Dwayne.jpeg" width="400" height="500">
-    <img src = "images/Ben Van Valen.jpeg" width="400" height = "500">
-    <img src = "images/Landscape3.jpeg" width = "400" height = "500">
+    <h2>look at coles things.</h2>
+    <img src = "images/Apple.jpeg" width="400" height="500" border = "3">
+    <img src = "images/V1Dwayne.jpeg" width="400" height="500" border = "3">
+    <img src = "images/Ben Van Valen.jpeg" width="400" height = "500" border = "3">
+    <img src = "images/Landscape3.jpeg" width = "400" height = "500" border = "3">
   </body>
 </html>
