--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <title>Stolen pictures</title>
 <html>
+<link rel="icon" type="image/x-icon" href="images/COLE.jpg">
 <link href="looky.css" type="text/css" rel="stylesheet">
   <body> 
     <h1><bold>Hello Gamers<bold></h1>
