--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@
     <img src = "images/Ben Van Valen.jpeg" width="400" height = "500" border = "3">
     <img src = "images/Landscape3.jpeg" width = "400" height = "500" border = "3">
   </body>
+  <div><script src="https://cdn.htmlgames.com/embed.js?game=Tetrix&amp;bgcolor=white"></script></div>
 </html>
