--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <link rel="icon" type="image/x-icon" href="images/COLE.jpg">
 <link href="looky.css" type="text/css" rel="stylesheet">
   <body> 
+    <a href = "games.html">GAMES</a>
     <h1><bold>Hello Gamers<bold></h1>
     <h2>look at coles things.</h2>
     <img src = "images/Apple.jpeg" width="400" height="500" border = "3">
@@ -11,5 +12,4 @@
     <img src = "images/Ben Van Valen.jpeg" width="400" height = "500" border = "3">
     <img src = "images/Landscape3.jpeg" width = "400" height = "500" border = "3">
   </body>
-  <div><script src="https://cdn.htmlgames.com/embed.js?game=Tetrix&amp;bgcolor=white"></script></div>
 </html>
