--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <link rel="icon" type="image/x-icon" href="images/COLE.jpg">
 <link href="looky.css" type="text/css" rel="stylesheet">
   <body> 
-    <a href = "games.html">GAMES</a>
+    <table>
+      <tr>
+        <td><a href = "games.html">GAMES</a></td>
+      </tr>
+    </table>
     <h1><bold>Hello Gamers<bold></h1>
     <h2>look at coles things.</h2>
     <img src = "images/Apple.jpeg" width="400" height="500" border = "3">
