--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <table>
       <tr>
         <td><a href = "games.html">GAMES</a></td>
+        <td>idididkkdkdd</td>
       </tr>
     </table>
     <h1><bold>Hello Gamers<bold></h1>
