--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <table>
       <tr>
         <td><a href = "games.html">GAMES</a></td>
-        <td>idididkkdkdd</td>
+        <td><a href = "images/COLE.jpg">COLE</a>></td>
+        <td>Nothing</td>
+        <td>Nothing</td>
+        <td>Nothing</td>
+        <td>Nothing</td>
       </tr>
     </table>
+    
+    
     <h1><bold>Hello Gamers<bold></h1>
     <h2>look at coles things.</h2>
     <img src = "images/Apple.jpeg" width="400" height="500" border = "3">
