--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <table>
       <tr>
         <td><a href = "games.html">GAMES</a></td>
-        <td><a href = "images/COLE.jpg">COLE</a>></td>
-        <td>Nothing</td>
+        <td><a href = "images/COLE.jpg">COLE</a></td>
+        <td><a href = "Bacon.html">Bacon</a></td>
         <td>Nothing</td>
         <td>Nothing</td>
         <td>Nothing</td>
