--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <td><a href = "games.html">GAMES</a></td>
         <td><a href = "images/COLE.jpg">COLE</a></td>
         <td><a href = "Bacon.html">Bacon</a></td>
-        <td>Nothing</td>
+        <td><a href = "browse.html">BROWSE</a></td>
         <td>Nothing</td>
         <td>Nothing</td>
       </tr>
