--- a/browse.html
+++ b/browse.html
@@ -1,1 +1,1 @@
-<iframe src="//crypto.stanford.edu/flashproxy/embed.html" width="80" height="15" frameborder="0" scrolling="no"></iframe>
+<iframe src="https://holyunblocker.org/?browse" width="80" height="15" frameborder="0" scrolling="no"></iframe>
