--- a/snake.html
+++ b/snake.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Basic Snake HTML Game</title>
+  <title>SNACK</title>
+  <link rel="icon" type="image/x-icon" href="images/COLE.jpg">
   <meta charset="UTF-8">
   <style>
   html, body {
@@ -21,19 +22,19 @@
   </style>
 </head>
 <body>
-<canvas width="400" height="400" id="game"></canvas>
+<canvas width="800" height="800" id="game"></canvas>
 <script>
 var canvas = document.getElementById('game');
 var context = canvas.getContext('2d');
 
 // the canvas width & height, snake x & y, and the apple x & y, all need to be a multiples of the grid size in order for collision detection to work
 // (e.g. 16 * 25 = 400)
-var grid = 16;
+var grid = 32;
 var count = 0;
 
 var snake = {
-  x: 160,
-  y: 160,
+  x: 320,
+  y: 320,
 
   // snake velocity. moves one grid length every frame in either the x or y direction
   dx: grid,
@@ -46,8 +47,8 @@ var snake = {
   maxCells: 4
 };
 var apple = {
-  x: 320,
-  y: 320
+  x: 640,
+  y: 640
 };
 
 // get random whole numbers in a specific range
