the snake score

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <body> 
     <table>
       <tr>
-        <td><a href = "games.html">GAMES</a></td>
+        <td><a href = "games.html">BROKEN</a></td>
         <td><a href = "images/COLE.jpg">COLE</a></td>
-        <td><a href = "Bacon.html">Bacon</a></td>
+        <td><a href = "Bacon.html">BLOCKED</a></td>
         <td><a href = "snake.html">snake</a></td>
         <td>Nothing</td>
         <td>Nothing</td>
