--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <td><a href = "images/COLE.jpg">COLE</a></td>
         <td><a href = "Bacon.html">BLOCKED</a></td>
         <td><a href = "snake.html">snake</a></td>
-        <td>Nothing</td>
+        <td><a href = "tetris.html">Teeetrees</a></td>
         <td>Nothing</td>
       </tr>
     </table>
