--- a/snake.html
+++ b/snake.html
@@ -3,8 +3,12 @@
 <head>
   <title>SNACK</title>
   <link rel="icon" type="image/x-icon" href="images/COLE.jpg">
-  <canvas id="myCanvas" width="300" height="150" style="border:1px solid rgb(0, 0, 0)">0</canvas>
   <meta charset="UTF-8">
+
+  <body>
+    <canvas id="myCanvas" width="300" height="150" style="border:1px solid rgb(255, 255, 255)">0</canvas>
+  </body>
+  
   <style>
   html, body {
     height: 100%;
@@ -17,6 +21,7 @@
     align-items: center;
     justify-content: center;
   }
+  
   canvas {
     border: 1px solid white;
   }
@@ -66,7 +71,7 @@ function loop() {
   requestAnimationFrame(loop);
 
   // slow game loop to 15 fps instead of 60 (60/15 = 4)
-  if (++count < 4) {
+  if (++count < 5) {
     return;
   }
 
@@ -122,7 +127,7 @@ function loop() {
       apple.y = getRandomInt(0, 25) * grid;
     }
     
-    ctx.fillText(score, 20, 20);
+   
     // check collision with all cells after this one (modified bubble sort)
     for (var i = index + 1; i < snake.cells.length; i++) {
 
@@ -140,6 +145,7 @@ function loop() {
       }
     }
   });
+  ctx.fillText(score, 20, 20);
 }
 
 // listen to keyboard events to move the snake
