--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <td><a href = "Bacon.html">BLOCKED</a></td>
         <td><a href = "snake.html">snake</a></td>
         <td><a href = "tetris.html">Teeetrees</a></td>
-        <td>Nothing</td>
+        <td>Nothings</td>
       </tr>
     </table>
     
