--- a/snake.html
+++ b/snake.html
@@ -146,6 +146,15 @@ function loop() {
       }
     }
   });
+  ctx.fillStyle = 'black';
+  ctx.globalAlpha = 0.75;
+  ctx.fillRect(0, canvas.height / 2 - 30, canvas.width, 60);
+
+  ctx.globalAlpha = 1;
+  ctx.fillStyle = 'white';
+  ctx.font = '36px monospace';
+  ctx.textAlign = 'center';
+  ctx.textBaseline = 'middle';
   ctx.fillText(score, ctx.width/2, ctx.height/2);
 }
 
