--- a/snake.html
+++ b/snake.html
@@ -4,10 +4,6 @@
   <title>SNACK</title>
   <link rel="icon" type="image/x-icon" href="images/COLE.jpg">
   <meta charset="UTF-8">
-
-  <body>
-    <canvas id="myCanvas" width="150" height="150"></canvas>
-  </body>
   
   <style>
   html, body {
@@ -29,6 +25,7 @@
 </head>
 <body>
 <canvas width="800" height="800" id="game"></canvas>
+<canvas id="myCanvas" width="150" height="150"></canvas>
 <script>
 var canvas = document.getElementById('game');
 var context = canvas.getContext('2d');
@@ -38,9 +35,9 @@ var context = canvas.getContext('2d');
 var grid = 32;
 var count = 0;
 var score = 0;
-var c = document.getElementById("myCanvas");
-var ctx = c.getContext("2d");
-ctx.font = "50px serif";
+var c = document.getElementById('myCanvas');
+var ctx = c.getContext('2d');
+ctx.font = "15px serif";
 
 var snake = {
   x: 320,
@@ -152,10 +149,10 @@ function loop() {
 
   ctx.globalAlpha = 1;
   ctx.fillStyle = 'white';
-  ctx.font = '36px monospace';
+  ctx.font = '19 px monospace';
   ctx.textAlign = 'center';
   ctx.textBaseline = 'middle';
-  ctx.fillText(score, ctx.width/2, ctx.height/2);
+  ctx.fillText("score: " + score, c.height / 2, c.width /2);
 }
 
 // listen to keyboard events to move the snake
