I made something happen

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <link rel="icon" type="image/x-icon" href="images/COLE.jpg">
 <link href="looky.css" type="text/css" rel="stylesheet">
+
   <body> 
     <table>
       <tr>
@@ -11,7 +12,8 @@
         <td><a href = "Bacon.html">BLOCKED</a></td>
         <td><a href = "snake.html">snake</a></td>
         <td><a href = "tetris.html">Teeetrees</a></td>
-        <td><a href ="https://www.youtube.com/channel/UC_hK9fOxyy_TM8FJGXIyG8Q"Nothings></a></a></td>
+        <td><a href ="https://www.youtube.com/channel/UC_hK9fOxyy_TM8FJGXIyG8Q">Nothings</a></td>
+        <td><a href = "Jerry.html">Don't look at Jerry</a></td>
       </tr>
     </table>
     
