--- a/Jerry.html
+++ b/Jerry.html
@@ -5,7 +5,7 @@
     <link href="looky.css" type="text/css" rel="stylesheet">
 
     <head>
-        Hello my name is baker.
-        Don't look at me.
+        <p>Hello my name is baker.</p>
+        <p>Don't look at me.</p>
     </head>
 </html>
