--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <td><a href = "tetris.html">Teeetrees</a></td>
         <td><a href ="https://www.youtube.com/channel/UC_hK9fOxyy_TM8FJGXIyG8Q">Nothings</a></td>
         <td><a href = "Jerry.html">Don't look at Jerry</a></td>
+        <td><a href = "Survey.html">Survey</a></td>
       </tr>
     </table>
     
