im making a thing

--- a/Jerry.html
+++ b/Jerry.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<title>GO AWAY</title>
+<title>WORK IN PROGRESS GO AWAY</title>
 <html>
+<head>
+    <meta charset= "UTF-8">
+    <meta http-equiv= "X-UA-Compatible" content="width=device-wdth, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="images/COLE.jpg">
-    <link href="looky.css" type="text/css" rel="stylesheet">
+    <link href="Jerry.css" type="text/css" rel="stylesheet">
 
-    <head>
+    
         <p>Hello my name is baker.</p>
         <p>Don't look at me.</p>
-    </head>
+</head>
+<body>
+    
+    <header>
+        <h1>Do The To Do Things</h1>
+        <form id= "New-Task-Form">
+            <input type="text" id="newFormInput" placeholder="type the thing">
+        </form>
+    </header>
+
+</body>
 </html>
