--- a/Jerry.html
+++ b/Jerry.html
@@ -12,10 +12,9 @@
         <p>Don't look at me.</p>
 </head>
 <body>
-    <script type="text/javascript" src="Jerry.js"></script>
     <header>
        <!--creating container for list-->
-        <div id= "todo-container">
+        <div id= "todoContainer">
             <!--name of list inside the container-->
             <div id="header">
                 <h1>doing things list</h1>
@@ -25,13 +24,21 @@
             <input type="text" id="inputBox" placeholder="type the thing" class="input-item">
 
             <!--the add button-->
-            <button id="input-button" onclick = "addTask()">Add</button>
-
+            <button id="inputButton" onclick="addTask()">Add</button>
+            
             <!--task list-->
             <h2>List o things u got to do or something maybe</h2>
             <ul id="list-container"></ul>
+            <hr />
+<!-- task list counter -->
+            <div class="counter-container">
+            <div id="task-counters">
+                Completed: <span id="completed-counter">0</span> | Uncompleted:
+                <span id="uncompleted-counter">0</span>
+            </div>
+            </div>
         </div>
     </header>
-
+    <script type="text/javascript" src="Jerry.js"></script>
 </body>
 </html>
