--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body> 
     <table>
       <tr>
-        <td><a href = "games.html">BROKEN</a></td>
+        <td><a href = "eaglecraft.html">EAGLE</a></td>
         <td><a href = "images/COLE.jpg">COLE</a></td>
         <td><a href = "Bacon.html">BLOCKED</a></td>
         <td><a href = "snake.html">snake</a></td>
