--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <title>Stolen pictures</title>
 <html>
-  <meta http-equiv="origin-trial" content="AjPm9ZZ6/ShIeVIIWiGOTimRgHldJ5vK8WICRlUy7i47AImsaR1WuRQat8v+R6ysE/d6RqYN/9rANRSDKnyt/AAAAACDeyJvcmlnaW4iOiJodHRwczovL2VyaWNrc29uYmFrNTIuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJXZWJBc3NlbWJseUpTUHJvbWlzZUludGVncmF0aW9uIiwiZXhwaXJ5IjoxNzQ0Njc1MjAwLCJpc1N1YmRvbWFpbiI6dHJ1ZX0=">
-<link rel="icon" type="image/x-icon" href="images/COLE.jpg">
+  <link rel="icon" type="image/x-icon" href="images/COLE.jpg">
 <link href="looky.css" type="text/css" rel="stylesheet">
-
+<head>
+  <meta http-equiv="origin-trial" content="AjPm9ZZ6/ShIeVIIWiGOTimRgHldJ5vK8WICRlUy7i47AImsaR1WuRQat8v+R6ysE/d6RqYN/9rANRSDKnyt/AAAAACDeyJvcmlnaW4iOiJodHRwczovL2VyaWNrc29uYmFrNTIuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJXZWJBc3NlbWJseUpTUHJvbWlzZUludGVncmF0aW9uIiwiZXhwaXJ5IjoxNzQ0Njc1MjAwLCJpc1N1YmRvbWFpbiI6dHJ1ZX0=">
+</head>
   <body> 
     <table>
       <tr>
