--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
     <img src = "images/V1Dwayne.jpeg" width="400" height="500" border = "3">
     <img src = "images/Ben Van Valen.jpeg" width="400" height = "500" border = "3">
     <img src = "images/Landscape3.jpeg" width = "400" height = "500" border = "3" href = "images/Movie poster.jpg">
+    <button class="hidden"></button>
   </body>
 </html>
