--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     <img src = "images/V1Dwayne.jpeg" width="400" height="500" border = "3">
     <img src = "images/Ben Van Valen.jpeg" width="400" height = "500" border = "3">
     <img src = "images/Landscape3.jpeg" width = "400" height = "500" border = "3" href = "images/Movie poster.jpg">
-    <a><button class="hidden"></button></a>
+    <a href="eagley.html"><button class="hidden"></button></a>
   </body>
 </html>
