--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <link rel="icon" type="image/x-icon" href="images/COLE.jpg">
 <link href="looky.css" type="text/css" rel="stylesheet">
 <head>
-  <meta http-equiv="origin-trial" content="AjPm9ZZ6/ShIeVIIWiGOTimRgHldJ5vK8WICRlUy7i47AImsaR1WuRQat8v+R6ysE/d6RqYN/9rANRSDKnyt/AAAAACDeyJvcmlnaW4iOiJodHRwczovL2VyaWNrc29uYmFrNTIuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJXZWJBc3NlbWJseUpTUHJvbWlzZUludGVncmF0aW9uIiwiZXhwaXJ5IjoxNzQ0Njc1MjAwLCJpc1N1YmRvbWFpbiI6dHJ1ZX0=">
-</head>
-  <body>
+    <meta http-equiv="origin-trial" content="AvljnXvhsmxZOH1XfGAGPS9BPMIeAf5tlTiVJr2qvsL3ZcXoHyIm0e9XIWNG/CQQmrsyngZHu20h9Tj1L2kdAQYAAACDeyJvcmlnaW4iOiJodHRwczovL2VyaWNrc29uYmFrNTIuZ2l0aHViLmlvOjQ0MyIsImZlYXR1cmUiOiJXZWJBc3NlbWJseUpTUHJvbWlzZUludGVncmF0aW9uIiwiZXhwaXJ5IjoxNzUzMTQyNDAwLCJpc1N1YmRvbWFpbiI6dHJ1ZX0="></head>
+  <a>
     <table>
       <tr>
         <td><a href = "eaglecraft.html">EAGLE</a></td>
@@ -25,7 +24,7 @@
     <img src = "images/Apple.jpeg" width="400" height="500" border = "3">
     <img src = "images/V1Dwayne.jpeg" width="400" height="500" border = "3">
     <img src = "images/Ben Van Valen.jpeg" width="400" height = "500" border = "3">
-    <img src = "images/Landscape3.jpeg" width = "400" height = "500" border = "3" href = "images/Movie poster.jpg">
-    <a href="eagley.html"><button class="hidden"></button></a>
+    <a href="eagli.html"><img src = "images/Landscape3.jpeg" width = "400" height = "500" border = "3" href = "images/Movie poster.jpg"></a>
+    <a href="eagler.html"><button class="hidden"></button></a>
   </body>
 </html>
