--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <img src = "images/Apple.jpeg" width="400" height="500" border = "3">
     <img src = "images/V1Dwayne.jpeg" width="400" height="500" border = "3">
     <img src = "images/Ben Van Valen.jpeg" width="400" height = "500" border = "3">
-    <a href="eagli.html" class="lookg"><img src = "images/Landscape3.jpeg" width = "400" height = "500" border = "3" href = "images/Movie poster.jpg"></a>
+    <a href="eagli.html"><img class="lookg" src = "images/Landscape3.jpeg" width = "400" height = "500" border = "3" href = "images/Movie poster.jpg"></a>
     <a href="eagler.html"><button class="hidden"></button></a>
   </body>
 </html>
