i wanna replace everything with this
qwe

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       <img class="image" src = "images/Apple.jpeg" width="400" height="500" border = "3">
       <img class="image" src = "images/V1Dwayne.jpeg" width="400" height="500" border = "3">
       <img class="image" src = "images/Ben Van Valen.jpeg" width="400" height = "500" border = "3">
-      <a href="eagli.html"><img class="image" src = "images/Landscape3.jpeg" width = "400" height = "500" border = "3" href = "images/Movie poster.jpg"></a>
+      <a href="pages/eagli.html"><img class="image" src = "images/Landscape3.jpeg" width = "400" height = "500" border = "3" href = "images/Movie poster.jpg"></a>
       <br>
-      <a href="eagler.html"><button class="hidden"></button></a>
+      <a href="pages/eagler.html"><button class="hidden"></button></a>
     </div>
   </body>
 </html>
